[package]
name = "libssg"
version = "0.1.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "static site generation library"
repository = "https://github.com/epilys/libssg"
keywords = ["static", "site", "generation", ]
categories = ["template-engine", "web-programming"]

[lib]
name = "libssg"

[dependencies]
chrono = "0.4"
regex = "1.3.4"
serde = { version = "^1.0.100", features = ["derive"] }
serde_json = "1.0.47"
tera = "1.12.1"
uuid = { version = "0.8.1", features = ["v3", ] }
