[package]
name = "libssg"
version = "0.1.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "static site generation library"
repository = "https://github.com/epilys/libssg"
keywords = ["static", "site", "generation", ]
categories = ["template-engine", "web-programming"]

[lib]
name = "libssg"

[dependencies]
anyhow = "^1"
chrono = { version = "^0.4" }#, features = ["serde", ] }
error-chain = { version = "^0.12", default-features = false }
indexmap = { version = "1.9", features = [] }
log = "0.4"
minijinja = { version = "0.31", features = ["source", ] }
regex = "^1"
serde = { version = "^1", features = ["derive", ] }
serde_json = "^1"
uuid = { version = "0.8", features = ["v3", ] }

[dev-dependencies]
stderrlog = "^0.5"
tempfile = "3.3"
